Creando la lista de mis experiencias asi como las contenedores de dichas experiencias

--- a/src/frontend/static/scss/utils/_variables.scss
+++ b/src/frontend/static/scss/utils/_variables.scss
@@ -55,6 +55,9 @@ $paypal: #033e8c;
 $instagram: #d6249f;
 $dribbble: #ea4c89;
 $slack: #611f69;
+$react: #00d8ff;
+$sass: #cc6699;
+$typescript: #007acc;
 $paypal-back: linear-gradient(150deg, rgba(4, 138, 191, 1) 0%, rgba(3, 103, 166, 1) 30%, rgba(3, 90, 166, 1) 70%, rgba(3, 62, 140, 1) 100%);
 $instagram-back: radial-gradient(circle at 30% 130%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
 
