--- a/src/frontend/static/scss/mixins/_forms.scss
+++ b/src/frontend/static/scss/mixins/_forms.scss
@@ -1,3 +1,23 @@
+@mixin simpleForm() {
+  &--control {
+    gap: 10px;
+  }
+  &--label {
+    margin-top: 20px;
+    font-size: $font-size-md;
+  }
+  &--input {
+    padding: 10px;
+    border-radius: $border-radius;
+    // border: 1px solid lighten($gray-color, 60%);
+    border: none;
+  }
+  &--button {
+    width: 100%;
+    justify-content: center;
+  }
+}
+
 @mixin simpleInputIconForm($color, $background) {
   display: grid;
   grid-template-areas: "content";
