--- a/src/frontend/static/scss/utils/_global.scss
+++ b/src/frontend/static/scss/utils/_global.scss
@@ -52,14 +52,8 @@ a {
   @include buttonLink($soft-color);
 }
 
-.form-control {
-  & .form--input {
-    padding: 10px;
-    // padding: 0;
-    border-radius: $border-radius;
-    border: none;
-    // border: 1px solid lighten($gray-color, 60%);
-  }
+.form {
+  @include simpleForm();
 }
 
 .form-input-icon {
