Mejorando la estructura del portafolio y la experiencia

--- a/src/frontend/components/Experience/experience.scss
+++ b/src/frontend/components/Experience/experience.scss
@@ -17,6 +17,9 @@
   &.light {
     background-color: $soft-color;
   }
+  &.dark {
+    background-color: darken($dark-background, 2%);
+  }
   &__image {
     justify-self: center;
     margin: 0;
