--- a/src/frontend/components/ExperienceList/experienceList.scss
+++ b/src/frontend/components/ExperienceList/experienceList.scss
@@ -1,13 +1,25 @@
 .ExperienceList {
-  gap: 50px;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  justify-content: center;
-  justify-items: center;
+  // justify-items: center;
+  & h2 {
+    justify-self: center;
+    padding: 50px 0;
+  }
+  &__elements {
+    gap: 50px;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    justify-content: center;
+    justify-items: center;
+
+  }
 }
 
 @media (min-width: 768px) {
   .ExperienceList {
+    // justify-items: left;
     padding: 0 25px;
+    & h2 {
+      justify-self: left;
+    }
   }
 }
 
@@ -19,6 +31,6 @@
 
 @media (min-width: 1440px) {
   .ExperienceList {
-    padding: 0 250px;
+    padding: 0 300px;
   }
 }
