--- a/src/frontend/components/Hero/hero.scss
+++ b/src/frontend/components/Hero/hero.scss
@@ -1,4 +1,4 @@
-@import './../../static/scss/utils/variables';
+@import './../../scss/utils/variables';
 
 .Hero {
   grid-template-areas: 'contain';
