--- a/src/frontend/scss/utils/_variables.scss
+++ b/src/frontend/scss/utils/_variables.scss
@@ -28,7 +28,7 @@ $black: #111111;
 
 //* Color scheme *//
 $dark-background: #282828;
-$light-background: #f4f7f9;
+$light-background: #EBF4F6;
 $primary-color: #042454;
 $secondary-color: #02132d;
 $tertiary-color: #0056B3;
