--- a/src/frontend/scss/index.scss
+++ b/src/frontend/scss/index.scss
@@ -2,7 +2,7 @@
 
 @import './mixins/shadow';
 @import './mixins/button';
-@import './mixins/forms';
+@import './mixins/form';
 
 @import './utils/grids';
 @import './utils/text';
