--- a/src/frontend/components/AboutMe/aboutMe.scss
+++ b/src/frontend/components/AboutMe/aboutMe.scss
@@ -1,33 +1,52 @@
-@import './../../static/scss/utils/variables';
+@import '../../scss/utils/variables';
+@import '../../scss/mixins/shadow';
 
 .AboutMe {
-  display: flex;
-  flex-wrap: wrap;
+  // display: grid;
+  justify-items: center;
+  background-color: rgba($white, 0.4);
+  border-radius: $border-radius;
+  justify-self: center;
+  width: 90vw;
+  margin: 50px 0;
+  box-shadow: $box-shadow-sm;
+  & h2 {
+    padding-top: 10px;
+  }
   &__emoji {
     width: 100%;
-    height: 50vh;
+    display: grid;
+    justify-items: center;
+    justify-self: center;
     & img {
       width: 100%;
+      max-width: 300px;
+      max-height: 400px;
       object-fit: contain;
       object-position: center;
-      filter: drop-shadow($box-shadow);
+      filter: drop-shadow($box-shadow-sm);
     }
   }
-  &--contain {
-    width: 100%;
-    padding: 0 25px;
-    text-align: center;
-    justify-items: center;
-    row-gap: 20px;
-  }
   &__body, &__footer {
-    row-gap: 20px;
+    row-gap: 10px;
+    padding: 20px;
     // padding-left: 25px;
     // text-align: center;
     justify-items: center;
   }
 
   &__footer {
+    background-color: $primary-color;
+    @include shadow($primary-color);
+    color: $white;
+    padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    border-bottom-left-radius: $border-radius;
+    border-bottom-right-radius: $border-radius;
+    width: 100%;
     &--contact {
       display: flex;
       align-items: center;
@@ -45,69 +64,95 @@
 
 @media (min-width: 768px) {
   .AboutMe {
-    &--contain {
-      width: 100%;
-      padding: 0 30px;
-      text-align: left;
-      justify-items: left;
-      row-gap: 15px;
+    grid-template-columns: auto 1fr;
+    & h2 {
+      grid-column-start: 2;
+      justify-self: flex-start;
     }
-    &__body, &__footer {
+    &__body {
       row-gap: 15px;
-      padding: 0 30px;
+      // padding: 10px 30px;
       text-align: left;
+      align-self: center;
       justify-items: left;
+      // grid-row-end: span 2;
     }
-  }
-}
-
-@media (min-width: 1024px) {
-  .AboutMe {
-    padding-left: 100px;
-    padding-right: 50px;
+    &__footer {
+      justify-content: flex-end;
+      grid-column-start: span 2;
+      align-items: center;
+    }
     &__emoji {
-      width: 40%;
-      height: 100vh;
+      justify-self: flex-end;
     }
-    &--contain {
-      width: 40%;
-      padding: 100px 0;
-    }
+    // &__footer {
+    //   width: 100%;
+    // }
   }
 }
 
 @media (min-width: 1440px) {
   .AboutMe {
-    &--contain {
-      width: 40%;
-      padding: 250px 0;
-    }
+    width: auto;
+    column-gap: 50px;
+    margin: 100px 20%;
+    // &__emoji img {
+    //   max-width: 400px;
+    // }
   }
 }
 
-@media (min-width: 1440px) and (min-height: 800px) {
-  .AboutMe {
-    &--contain {
-      padding: 150px 0;
-    }
-  }
-}
+// @media (min-width: 1024px) {
+//   .AboutMe {
+//     // padding-left: 100px;
+//     // padding-right: 50px;
+//     margin: 200px 0;
+//     &__emoji {
+//       margin: 0;
+//       width: 40%;
+//       // height: 100vh;
+//     }
+//     &--contain {
+//       width: 400px;
+//       padding-top: 50px;
+//       box-shadow: none;
+//       // padding: 100px 0;
+//     }
+//   }
+// }
 
-@media (min-width: 1024px) and (min-height: 768px) {
-  .AboutMe {
-    &__emoji {
-      width: 40%;
-    }
-    &--contain {
-      width: 50%;
-    }
-  }
-}
+// @media (min-width: 1440px) {
+//   .AboutMe {
+//     &--contain {
+//       width: 40%;
+//       padding: 250px 0;
+//     }
+//   }
+// }
 
-@media (min-width: 1280px) and (min-height: 800px) {
-  .AboutMe {
-    &--contain {
-      padding: 150px 0;
-    }
-  }
-}
+// @media (min-width: 1440px) and (min-height: 800px) {
+//   .AboutMe {
+//     &--contain {
+//       padding: 150px 0;
+//     }
+//   }
+// }
+
+// @media (min-width: 1024px) and (min-height: 768px) {
+//   .AboutMe {
+//     &__emoji {
+//       width: 40%;
+//     }
+//     &--contain {
+//       width: 50%;
+//     }
+//   }
+// }
+
+// @media (min-width: 1280px) and (min-height: 800px) {
+//   .AboutMe {
+//     &--contain {
+//       padding: 150px 0;
+//     }
+//   }
+// }
