--- a/src/frontend/components/AppBar/appBar.scss
+++ b/src/frontend/components/AppBar/appBar.scss
@@ -2,261 +2,287 @@
 @import './../../scss/mixins/shadow';
 
 .AppBar {
-  background: $primary-color;
+  padding: 5px 25px;
+  background-color: $primary-color;
   &.dark {
-    background: $secondary-color;
+    background-color: $secondary-color;
   }
 }
 
 .AppBar__header {
   display: flex;
-  padding: 0 25px;
+  // padding: 0 25px;
   align-items: center;
   justify-content: space-between;
+}
+
+.AppBar__header--logo {
+  width: 100px;
   & img {
-    width: 100px;
-    height: 60px;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
     object-position: center;
   }
 }
 
 .AppBar__body {
-  &--search {
-    display: flex;
-    align-content: center;
-    align-items: center;
-    justify-content: space-between;
-    & > button {
-      padding-left: 0;
-      padding: 22px 40px;
-      justify-self: right;
-    }
-    & .form-control {
-      opacity: 0;
-      padding-left: 20px;
-    }
-    & .form--input {
-      width: 40vw;
-      color: $white;
-      background: none;
-      transition: $transition-base;
-    }
-    & .form--input::placeholder {
-      color: $soft-color;
-    }
-    & .form--input.true::placeholder {
-      color: $primary-color;
-    }
-
-    & .form--input.true {
-      color: $primary-color;
-      background-color: $soft-color;
-    }
+  // display: none;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  transition: $transition-theme;
+  grid-template-rows: min-content;
+  align-content: center;
+  justify-content: center;
+  &.light {
+    background: rgba($dark-bg, 0.9);
   }
+  &.dark {
+    background: rgba($black, 0.9);
+  }
+}
 
-  &.false {
-    display: none;
+.AppBar__body--close {
+  width: 50px;
+  justify-self: flex-end;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  // justify-content: flex-end;
+  &.light {
+    background-color: $white;
+  }
+  &.dark {
+    color: $soft-color;
+    background-color: $black;
+  }
+}
+
+.AppBar__body--nav {
+  width: 90vw;
+  justify-self: center;
+  padding: 10px;
+  flex-wrap: wrap;
+  border-top-left-radius: $border-radius;
+  justify-content: space-evenly;
+  &.light {
+    background-color: $white;
+  }
+  &.dark {
+    color: $soft-color;
+    background-color: $black;
   }
 }
 
 .AppBar__body--theme {
+  width: 90vw;
+  padding: 10px 0;
+  justify-items: center;
+  gap: 10px;
   &.light {
-    background: $light-background;
+    background-color: $white;
   }
   &.dark {
-    background: $dark-background;
+    color: $soft-color;
+    background-color: $black;
   }
-  height: 100px;
-  margin: 0px 25px;
-  padding-top: 25px;
-  text-align: center;
-  justify-content: center;
-  grid-template-rows: auto 1fr;
+}
+
+.AppBar__body--fans {
+  width: 90vw;
+  padding: 15px 20px;
   border-bottom-left-radius: $border-radius;
   border-bottom-right-radius: $border-radius;
-  transition: $transition-theme;
-  & p {
-    padding-bottom: 10px;
+  & button {
+    width: 100%;
   }
-  & .ToggleSwitch {
-    align-self: start;
-  }
-}
-
-.ToggleSwitch {
-  width: 70px;
-  height: 28px;
-  border: none;
-  cursor: pointer;
-  border-radius: 50px;
-  transition: $transition-theme;
   &.light {
-    background: $tertiary-color;
-    @include shadow($tertiary-color);
+    background-color: $white;
   }
   &.dark {
-    background: $primary-color;
-    @include shadow($primary-color);
-  }
-  &__body {
-    width: 50%;
-    display: flex;
-    grid-area: content;
-    align-self: center;
-    position: relative;
-    transition: $transition-theme;
-    & .fas.fa-cloud, .fas.fa-star {
-      font-size: $font-size-xs;
-      padding-left: 2px;
-      &:first-child {
-        padding-bottom: 6px;
-      }
-      &:nth-child(2) {
-        padding-top: 10px;
-      }
-      &:last-child {
-        padding-top: 3px;
-      }
-    }
-    &.light {
-      right: 0px;
-      color: $soft-color;
-    }
-    &.dark {
-      right: -18px;
-      color: $gray-400;
-    }
-  }
-  & .fas.fa-circle, .fas.fa-moon {
-    top: 2px;
-    width: 20px;
-    height: 20px;
-    position: relative;
-    grid-area: content;
-    border-radius: 100px;
-    font-size: $icon-size-sm;
-    transition: $transition-theme;
-  }
-  & .fas.fa-circle {
-    left: 5px;
-    color: $sun;
-  }
-  & .fas.fa-moon {
-    left: -28px;
     color: $soft-color;
+    background-color: $black;
   }
 }
 
-@media (min-width: 768px) {
-  .AppBar {
-    display: flex;
-  }
-  .AppBar__header {
-    & button {
-      display: none;
-    }
-  }
+// .AppBar__body {
+//   &--search {
+//     display: flex;
+//     align-content: center;
+//     align-items: center;
+//     justify-content: space-between;
+//     & > button {
+//       padding-left: 0;
+//       padding: 22px 40px;
+//       justify-self: right;
+//     }
+//     & .form-control {
+//       opacity: 0;
+//       padding-left: 20px;
+//     }
+//     & .form--input {
+//       width: 40vw;
+//       color: $white;
+//       background: none;
+//       transition: $transition-base;
+//     }
+//     & .form--input::placeholder {
+//       color: $soft-color;
+//     }
+//     & .form--input.true::placeholder {
+//       color: $primary-color;
+//     }
 
-  .AppBar__body {
-    position: initial;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-    &.true {
-      display: flex;
-    }
-    &.false {
-      display: flex;
-    }
-    &--search {
-      & .form--input {
-        width: 15vw;
-      }
-      & > button {
-        display: none;
-      }
-    }
-  }
+//     & .form--input.true {
+//       color: $primary-color;
+//       background-color: $soft-color;
+//     }
+//   }
 
-  .AppBar__body--nav {
-    color: $soft-color;
-    width: 100%;
-    justify-content: space-evenly;
-    & > a {
-      color: $soft-color;
-      padding: 0 7.5px;
-    }
-    & > a span {
-      padding-left: 10px;
-    }
-  }
+//   &.false {
+//     display: none;
+//   }
+// }
 
-  .AppBar__body--theme {
-    padding-top: 0;
-    align-items: center;
-    grid-template-rows: 1fr;
-    height: auto;
-    &.light {
-      background: none;
-    }
-    &.dark {
-      background: none;
-    }
-    & > p {
-      display: none;
-      padding: 0;
-    }
-  }
-}
+// .AppBar__body--theme {
+//   &.light {
+//     background: $light-bg;
+//   }
+//   &.dark {
+//     background: $dark-bg;
+//   }
+//   height: 100px;
+//   margin: 0px 25px;
+//   padding-top: 25px;
+//   text-align: center;
+//   justify-content: center;
+//   grid-template-rows: auto 1fr;
+//   border-bottom-left-radius: $border-radius;
+//   border-bottom-right-radius: $border-radius;
+//   transition: $transition-theme;
+//   & p {
+//     padding-bottom: 10px;
+//   }
+//   & .ToggleSwitch {
+//     align-self: start;
+//   }
+// }
 
-@media (max-width: 768px) {
-  .AppBar__body {
-    &.true {
-      top: 0;
-      z-index: 10;
-      width: 100vw;
-      height: 100vh;
-      position: fixed;
-      transition: $transition-theme;
-      grid-template-rows: auto auto 1fr;
-      &.light {
-        background: rgba($dark-background, 0.9);
-      }
-      &.dark {
-        background: rgba($black, 0.9);
-      }
-      & nav.light {
-        background: $light-background;
-        border-bottom: 1px solid $gray-400;
-      }
-      & nav.dark {
-        background: $dark-background;
-        border-bottom: 1px solid $black;
-      }
-      & nav.dark a {
-        color: $soft-color;
-      }
-      & nav {
-        padding: 25px;
-        margin: 50px 25px;
-        margin-bottom: 0;
-        justify-content: center;
-        font-size: $font-size-xs;
-        transition: $transition-theme;
-        border-top-left-radius: $border-radius;
-        border-top-right-radius: $border-radius;
-        & a {
-          padding: 0 10px;
-          text-align: center;
-          flex-direction: column;
-        }
-      }
-      & nav i {
-        padding-bottom: 10px;
-        font-size: $icon-size-sm;
-      }
-    }
-  }
-}
+// .AppBar__body--fans button {
+//   width: 150px;
+// }
 
+// @media (min-width: 768px) {
+//   .AppBar {
+//     display: flex;
+//   }
+//   .AppBar__header {
+//     & button {
+//       display: none;
+//     }
+//   }
+
+//   .AppBar__body {
+//     position: initial;
+//     width: 100%;
+//     align-items: center;
+//     justify-content: space-between;
+//     &.true {
+//       display: flex;
+//     }
+//     &.false {
+//       display: flex;
+//     }
+//     &--search {
+//       & .form--input {
+//         width: 15vw;
+//       }
+//       & > button {
+//         display: none;
+//       }
+//     }
+//   }
+
+//   .AppBar__body--nav {
+//     color: $soft-color;
+//     width: 100%;
+//     justify-content: space-evenly;
+//     & > a {
+//       color: $soft-color;
+//       padding: 0 7.5px;
+//     }
+//     & > a span {
+//       padding-left: 10px;
+//     }
+//   }
+
+//   .AppBar__body--theme {
+//     padding-top: 0;
+//     align-items: center;
+//     grid-template-rows: 1fr;
+//     height: auto;
+//     &.light {
+//       background: none;
+//     }
+//     &.dark {
+//       background: none;
+//     }
+//     & > p {
+//       display: none;
+//       padding: 0;
+//     }
+//   }
+// }
+
+// @media (max-width: 768px) {
+//   .AppBar__body {
+//     &.true {
+//       top: 0;
+//       z-index: 10;
+//       width: 100vw;
+//       height: 100vh;
+//       position: fixed;
+//       transition: $transition-theme;
+//       grid-template-rows: auto auto 1fr;
+//       &.light {
+//         background: rgba($dark-bg, 0.9);
+//       }
+//       &.dark {
+//         background: rgba($black, 0.9);
+//       }
+//       & nav.light {
+//         background: $light-bg;
+//         border-bottom: 1px solid $gray-400;
+//       }
+//       & nav.dark {
+//         background: $dark-bg;
+//         border-bottom: 1px solid $black;
+//       }
+//       & nav.dark a {
+//         color: $soft-color;
+//       }
+//       & nav {
+//         padding: 25px;
+//         margin: 50px 25px;
+//         margin-bottom: 0;
+//         justify-content: center;
+//         font-size: $font-size-xs;
+//         transition: $transition-theme;
+//         border-top-left-radius: $border-radius;
+//         border-top-right-radius: $border-radius;
+//         & a {
+//           padding: 0 10px;
+//           text-align: center;
+//           flex-direction: column;
+//         }
+//       }
+//       & nav i {
+//         padding-bottom: 10px;
+//         font-size: $icon-size-sm;
+//       }
+//     }
+//   }
+// }
