--- a/src/frontend/scss/utils/_variables.scss
+++ b/src/frontend/scss/utils/_variables.scss
@@ -27,12 +27,12 @@ $dark: #1c2540;
 $black: #111111;
 
 //* Color scheme *//
-$dark-background: #282828;
-$light-background: #EBF4F6;
+$dark-bg: #282828;
+$light-bg: #f4f7f9;
 $primary-color: #042454;
 $secondary-color: #02132d;
 $tertiary-color: #0056B3;
-$acent-color: #5C046C;
+$accent-color: #5C046C;
 $success-color: #1C7414;
 $warning-color: #FCC408;
 $danger-color: #8C0404;
@@ -57,6 +57,8 @@ $dribbble: #ea4c89;
 $slack: #611f69;
 $react: #00d8ff;
 $sass: #cc6699;
+$node: #3C873A;
+$mongo: #589636;
 $typescript: #007acc;
 $paypal-back: linear-gradient(150deg, rgba(4, 138, 191, 1) 0%, rgba(3, 103, 166, 1) 30%, rgba(3, 90, 166, 1) 70%, rgba(3, 62, 140, 1) 100%);
 $instagram-back: radial-gradient(circle at 30% 130%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
@@ -68,7 +70,7 @@ $theme-colors: map-merge((
   "primary": $primary-color,
   "secondary": $secondary-color,
   "tertiary": $tertiary-color,
-  "acent": $acent-color,
+  "accent": $accent-color,
   "success": $success-color,
   "warning": $warning-color,
   "danger": $danger-color,
@@ -101,6 +103,11 @@ $theme-colors: map-merge((
   "paypal": $paypal,
   "instagram": $instagram,
   "dribbble": $dribbble,
+  "sass": $sass,
+  "react": $react,
+  "node": $node,
+  "mongo": $mongo,
+  "typescript": $typescript,
   "slack": $slack,
   "gray-100": $gray-100,
   "gray-200": $gray-200,
@@ -112,8 +119,8 @@ $theme-colors: map-merge((
   "gray-800": $gray-800,
 ), $theme-colors);
 
-$grays: ();
-$grays: map-merge((
+$shades-grey: ();
+$shades-grey: map-merge((
   "100": $gray-100,
   "200": $gray-200,
   "300": $gray-300,
@@ -123,7 +130,7 @@ $grays: map-merge((
   "700": $gray-700,
   "800": $gray-800,
   "900": $gray-900,
-), $grays);
+), $shades-grey);
 
 $brand-colors: ();
 $brand-colors: map-merge((
