Creando seccion de informacion

--- a/src/frontend/components/Footer/footer.scss
+++ b/src/frontend/components/Footer/footer.scss
@@ -1,5 +1,5 @@
-@import './../../static/scss/utils/variables';
-@import './../../static/scss/mixins/shadow';
+@import '../../scss/utils/variables';
+@import '../../scss/mixins/shadow';
 
 .Footer {
   color: $soft-color;
