--- a/src/frontend/scss/utils/_variables.scss
+++ b/src/frontend/scss/utils/_variables.scss
@@ -59,6 +59,8 @@ $react: #00d8ff;
 $sass: #cc6699;
 $node: #3C873A;
 $mongo: #589636;
+$platzi: #98CA3F;
+$ibm: #1F70C1;
 $typescript: #007acc;
 $paypal-back: linear-gradient(150deg, rgba(4, 138, 191, 1) 0%, rgba(3, 103, 166, 1) 30%, rgba(3, 90, 166, 1) 70%, rgba(3, 62, 140, 1) 100%);
 $instagram-back: radial-gradient(circle at 30% 130%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
@@ -107,6 +109,8 @@ $theme-colors: map-merge((
   "react": $react,
   "node": $node,
   "mongo": $mongo,
+  "platzi": $platzi,
+  "ibm": $ibm,
   "typescript": $typescript,
   "slack": $slack,
   "gray-100": $gray-100,
