--- a/src/frontend/scss/utils/_variables.scss
+++ b/src/frontend/scss/utils/_variables.scss
@@ -82,6 +82,7 @@ $theme-colors: map-merge((
   "light": $light-color,
   "soft": $soft-color,
   "blue": $blue,
+  "neon": $neon,
   "indigo": $indigo,
   "purple": $purple,
   "pink": $pink,
