--- a/src/frontend/components/AboutMe/aboutMe.scss
+++ b/src/frontend/components/AboutMe/aboutMe.scss
@@ -4,12 +4,17 @@
 .AboutMe {
   // display: grid;
   justify-items: center;
-  background-color: rgba($white, 0.4);
   border-radius: $border-radius;
   justify-self: center;
   width: 90vw;
   margin: 50px 0;
   box-shadow: $box-shadow-sm;
+  &.light {
+    background-color: rgba($white, 0.4);
+  }
+  &.dark {
+    background-color: rgba($black, 0.4);
+  }
   & h2 {
     padding-top: 10px;
   }
