--- a/src/frontend/pages/Home/home.scss
+++ b/src/frontend/pages/Home/home.scss
@@ -61,6 +61,9 @@
 .Skills {
   gap: 25px;
   justify-items: center;
+  background-color: $primary-color;
+  color: $soft-color;
+  padding-top: 50px;
   & > .flex {
     flex-wrap: wrap;
     justify-content: center;
@@ -91,7 +94,7 @@
   & h6 {
     font-family: $font-family-aside;
     font-size: $font-size-lg;
-    color: $neon;
+    color: $white;
   }
   & > .flex {
     padding-top: 25px;
@@ -106,7 +109,7 @@
     align-items: flex-start;
   }
   & ul li {
-    color: $gray-700;
+    color: $gray-500;
   }
 }
 
@@ -127,7 +130,7 @@
 ///////////////////////////////////////////////////////////////
 
 .Projects {
-  padding: 50px 0;
+  padding: 100px 0;
   justify-items: center;
   gap: 50px;
 }
@@ -140,10 +143,15 @@
 
 .ProjectCard {
   // padding: 25px;
-  background-color: $white;
   border-radius: $border-radius;
   box-shadow: $box-shadow-sm;
   max-width: 335px;
+  &.light {
+    background-color: $white;
+  }
+  &.dark {
+    background-color: $black;
+  }
 }
 
 .ProjectCard__header--image {
@@ -188,12 +196,17 @@
   height: 100px;
   border-radius: $circle-radius;
   box-shadow: $box-shadow-sm;
-  background: $white;
   border: 1px solid rgba($gray-500, 0.5);
   justify-self: center;
   position: relative;
   bottom: 50%;
   z-index: 4;
+  &.light {
+    background-color: $white;
+  }
+  &.dark {
+    background-color: $gray-500;
+  }
   // padding: 5px;
   & img {
     width: 100%;
@@ -233,7 +246,7 @@
   justify-content: space-between;
   align-items: center;
   & span {
-    color: $neon;
+    // color: $neon;
     font-weight: bold;
   }
 }
@@ -280,11 +293,16 @@
   }
 }
 
+////////////////////////////////////////////////////////
+
 .MoreAboutMe {
   padding: 50px 25px;
   gap: 25px;
+  background-color: $gray-500;
+  // background-color: $white;
   & h2 {
     text-align: center;
+    color: $white;
   }
 }
 
@@ -322,11 +340,8 @@
 .MoreAboutMe--item {
   gap: 25px;
   transition: $transition-base;
+  color: $black;
 }
-
-// .MoreAboutMe--lastP {
-//   grid-column-end: span 2;
-// }
 
 .MoreAboutMe--links {
   justify-content: space-between;
@@ -354,38 +369,30 @@
 
 @media screen and (min-width: 768px) {
   .MoreAboutMe {
-    max-width: 1000px;
-    justify-self: center;
+    // max-width: 1000px;
+    justify-items: center;
+    justify-content: center;
     gap: 80px;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     & h2 {
       width: 100%;
       height: 100%;
+      color: $white;
+      max-width: 435px;
       align-items: center;
-      background-color: $white;
       border-radius: $border-radius;
-      color: $pink;
+      background-color: $primary-color;
     }
   }
 
   .MoreAboutMe--form {
     display: grid;
-    // grid-column-end: span 2;
-    // grid-template-columns: repeat(2, 1fr);
-    // padding: 0 100px;
-    & label:nth-child(3) {
-      // grid-column-end: span 2;
-    }
-    & button {
-      // grid-column-end: span 2;
-    }
   }
 
   .MoreAboutMe--item {
-    background-color: $white;
-    // padding: 25px;
-    // width: 400px;
+    max-width: 435px;
+    color: $black;
     border-radius: $border-radius;
     height: max-content;
     & p {
@@ -398,100 +405,95 @@
       grid-column-start: 1;
       grid-row-start: 2;
       border: none;
-      // align-self: flex-start;
     }
-    // &:nth-child(2) {
-    //   max-height: 248px;
-    // }
-    // &:nth-child(3) {
-    //   max-height: 309px;
-    //   // margin: 50px 0;
-    // }
-    // &:nth-child(4) {
-    //   max-height: 223px;
-    // }
-    // &:nth-child(2)::after {
-    //   content: '';
-    //   width: 150px;
-    //   height: 150px;
-    //   z-index: 100;
-    //   position: relative;
-    //   grid-row-start: 1;
-    //   grid-column-start: 1;
-    //   right: 80px;
-    //   top: 0;
-    //   right: -640px;
-    //   border-radius: $organic-radius;
-    //   background-color: $twitch;
-    // }
-    // &:nth-child(2)::before {
-    //   content: '';
-    //   width: 150px;
-    //   height: 150px;
-    //   z-index: 100;
-    //   position: relative;
-    //   grid-row-start: 2;
-    //   grid-column-start: 1;
-    //   right: -420px;
-    //   bottom: 50px;
-    //   border-radius: $organic-radius;
-    //   background-color: $twitch;
-    // }
-    // &:nth-child(3) {
-    //   justify-self: flex-end;
-    // }
-    // &:nth-child(3)::after {
-    //   content: '';
-    //   width: 150px;
-    //   height: 150px;
-    //   z-index: 100;
-    //   position: relative;
-    //   grid-row-start: 1;
-    //   grid-column-start: 1;
-    //   top: 0;
-    //   left: -400px;
-    //   border-radius: $organic-radius;
-    //   background-color: $ibm;
-    // }
-    // &:nth-child(3)::before {
-    //   content: '';
-    //   width: 150px;
-    //   height: 150px;
-    //   z-index: 100;
-    //   position: relative;
-    //   grid-row-start: 2;
-    //   grid-column-start: 1;
-    //   left: -127px;
-    //   bottom: 90px;
-    //   border-radius: $organic-radius;
-    //   background-color: $ibm;
-    // }
-    // &:nth-child(4)::after {
-    //   content: '';
-    //   width: 150px;
-    //   height: 150px;
-    //   z-index: 100;
-    //   position: relative;
-    //   grid-row-start: 1;
-    //   grid-column-start: 1;
-    //   right: 80px;
-    //   top: 0;
-    //   right: -640px;
-    //   border-radius: $organic-radius;
-    //   background-color: $platzi;
-    // }
-    // &:nth-child(4)::before {
-    //   content: '';
-    //   width: 150px;
-    //   height: 150px;
-    //   z-index: 100;
-    //   position: relative;
-    //   grid-row-start: 2;
-    //   grid-column-start: 1;
-    //   right: -370px;
-    //   bottom: 100px;
-    //   border-radius: $organic-radius;
-    //   background-color: $platzi;
-    // }
+    &.twitch {
+      background-color: rgba($twitch, 0.2);
+    }
+    &.ibm {
+      background-color: rgba($ibm, 0.2);
+    }
+    &.platzi {
+      background-color: rgba($platzi, 0.2);
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .MoreAboutMe {
+    padding: 50px 10%;
+    margin: 200px 0;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .MoreAboutMe {
+    padding: 50px 20%;
+  }
+}
+
+//////////////////////////////////////////////////
+
+.PageNav {
+  // display: grid;
+  position: fixed;
+  width: 80px;
+  top: 80px;
+  z-index: 200;
+  border-top-right-radius: $border-radius;
+  border-bottom-right-radius: $border-radius;
+  display: none;
+  // left: 25px;
+  // gap: 10px;
+  &.light {
+    background-color: $soft-color;
+  }
+  &.dark {
+    background-color: $secondary-color;
+    & a {
+      border: 1px solid $gray-color;
+      color: $white;
+    }
+  }
+  & a {
+    // text-align: left;
+    // justify-content: flex-start;
+    border-radius: 0;
+    justify-items: center;
+    width: 100%;
+    display: grid;
+    gap: 5px;
+    border: 1px solid lighten($gray-500, 5%)
+  }
+  & a:first-child {
+    border-top-right-radius: $border-radius;
+  }
+  & a:last-child {
+    border-bottom-right-radius: $border-radius;
+  }
+  & a span {
+    font-weight: 500;
+    font-size: $font-size-xs;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .PageNav {
+    display: grid;
+  }
+}
+
+//////////////////////////////////////////////////
+
+.Contact {
+  padding: 50px 25px;
+  max-width: 1000px;
+  justify-self: center;
+  gap: 25px;
+}
+
+@media screen and (min-width: 768px) {
+  .Contact {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
   }
 }
