Estructurando el proyecto

--- a/src/frontend/scss/utils/_global.scss
+++ b/src/frontend/scss/utils/_global.scss
@@ -119,3 +119,8 @@ body .btn-soft {
     transform: none;
   }
 }
+
+body .btn-outline-white:hover,
+body .btn-outline-soft:hover {
+  color: $black;
+}
