--- a/src/frontend/components/ProjectList/projectList.scss
+++ b/src/frontend/components/ProjectList/projectList.scss
@@ -1,22 +1,11 @@
-.ProjectList {
-  padding: 150px 25px;
+.Projects {
+  padding: 100px 0;
   justify-items: center;
-  row-gap: 50px;
-  &__elements {
-    row-gap: 150px;
-  }
+  gap: 50px;
 }
 
-@media (min-width: 768px) {
-  .ProjectList {
-    justify-items: left;
-    padding: 150px 30px;
-  }
+.Projects__body {
+  padding: 0 20px;
+  gap: 80px;
+  // grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
 }
-
-@media (min-width: 1440px) {
-  .ProjectList {
-    padding: 150px 300px;
-  }
-}
-
