--- a/src/frontend/components/Footer/footer.scss
+++ b/src/frontend/components/Footer/footer.scss
@@ -26,6 +26,9 @@
     & a {
       width: 100%;
     }
+    & small {
+      font-size: $font-size-xs;
+    }
   }
   &__body {
     justify-self: center;
