--- a/src/frontend/components/Hero/hero.scss
+++ b/src/frontend/components/Hero/hero.scss
@@ -26,8 +26,8 @@
   &__image {
     grid-area: contain;
     margin: 0;
-    width: 100%;
-    height: 100vh;
+    width: 99vw;
+    height: 92vh;
     & img {
       width: 100%;
       height: 100%;
