--- a/src/frontend/components/Contact/contact.scss
+++ b/src/frontend/components/Contact/contact.scss
@@ -7,6 +7,17 @@
   gap: 25px;
 }
 
+.MoreAboutMe--emoji {
+  width: 100%;
+  height: 100%;
+  & img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .Contact {
     grid-template-columns: repeat(2, 1fr);
