Conectando a api y agregando funcionalidad a formularios

--- a/src/frontend/scss/mixins/_form.scss
+++ b/src/frontend/scss/mixins/_form.scss
@@ -85,6 +85,10 @@
       padding-left: 5px;
     }
   }
+  &-error {
+    font-size: $font-size-xs;
+    color: $danger-color;
+  }
 }
 
 // @mixin formBasicDark {
