--- a/src/frontend/pages/Project/project.scss
+++ b/src/frontend/pages/Project/project.scss
@@ -40,6 +40,7 @@
   // width: 100%;
   grid-template-columns: repeat(4, 1fr);
   justify-content: space-between;
+  align-items: center;
   & p {
     grid-column-end: span 4;
   }
@@ -130,6 +131,7 @@
     & figure {
       width: 100%;
       height: 100%;
+      max-height: 600px;
     }
     & p {
       padding: 25px;
@@ -189,15 +191,16 @@
     border-radius: $border-radius;
     max-width: 1000px;
     justify-self: center;
+    grid-template-columns: repeat(2, 1fr);
     &.light {
       background-color: $white;
     }
     &.dark {
       background-color: $black;
     }
-    &--header {
-      grid-column-end: span 2;
-    }
+    // &--header {
+    //   grid-column-end: span 2;
+    // }
     &--item {
       padding: 0 25px;
       gap: 10px;
