--- a/src/frontend/components/ProjectCard/projectCard.scss
+++ b/src/frontend/components/ProjectCard/projectCard.scss
@@ -16,6 +16,7 @@
 .ProjectCard__header--image {
   width: 100%;
   height: 100%;
+  // max-width: 300px;
   border-radius: $border-radius;
   display: grid;
   & source {
@@ -108,6 +109,7 @@
   justify-self: stretch;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   & span {
     // color: $neon;
     font-weight: bold;
