Update esbuild config and change fonts

--- a/src/frontend/scss/utils/_variables.scss
+++ b/src/frontend/scss/utils/_variables.scss
@@ -32,7 +32,7 @@ $light-bg: #f4f7f9;
 $primary-color: #042454;
 $secondary-color: #02132d;
 $tertiary-color: #0056B3;
-$accent-color: #5C046C;
+$accent-color: #AC1459;
 $success-color: #1C7414;
 $warning-color: #FCC408;
 $danger-color: #8C0404;
@@ -198,9 +198,8 @@ $transition-tabs: all 0.2s;
 $transition-theme: all 0.5s ease;
 
 //* Fonts *//
-$font-family-base: 'Raleway', sans-serif;
-$font-family-headers: 'Iceland', sans-serif;
-$font-family-aside: 'Recursive', sans-serif;
+$font-family-base: 'Quicksand', sans-serif;
+$font-family-headers: 'Poppins', sans-serif;
 $font-size-base: 1rem;
 $font-size-xxl: ($font-size-base * 2);
 $font-size-xl: ($font-size-base * 1.5);
